# project

./: .gitignore  README.md  docker-compose.yaml
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/.github/workflows/: python-ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  startup.py
backend/app/api/: movielist.py  routers.py
backend/app/core/: database.py
backend/app/core/settings/: fast_api.py  settings.py
backend/app/db/: init_db.py
backend/app/entities/: movie.py  movie_producer.py  producer.py
backend/app/exceptions/: base.py
backend/app/repositories/: movielist.py
backend/app/schemas/: movielist_schema.py
backend/app/services/: movielist.py
backend/app/tests/: conftest.py
backend/app/tests/integration/tests/: test_import_csv.py
backend/app/tests/integration/tests/tests/: test_intervals.py
